--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -69,6 +69,8 @@
     <ClInclude Include="..\engine\CFTGlyphCache.h" />
     <ClInclude Include="..\engine\CCImage.h" />
     <ClInclude Include="..\engine\CInputReader.h" />
+    <ClInclude Include="..\engine\CLight.h" />
+    <ClInclude Include="..\engine\CLightSetting.h" />
     <ClInclude Include="..\engine\CMaterial.h" />
     <ClInclude Include="..\engine\CMesh.h" />
     <ClInclude Include="..\engine\CMeshManager.h" />
@@ -130,6 +132,8 @@
     <ClCompile Include="..\engine\CFTFont.cpp" />
     <ClCompile Include="..\engine\CFTGlyphCache.cpp" />
     <ClCompile Include="..\engine\CInputReader.cpp" />
+    <ClCompile Include="..\engine\CLight.cpp" />
+    <ClCompile Include="..\engine\CLightSetting.cpp" />
     <ClCompile Include="..\engine\CMaterial.cpp" />
     <ClCompile Include="..\engine\CMesh.cpp" />
     <ClCompile Include="..\engine\CMeshManager.cpp" />
