--- a/tools/TestCompiler/TestCompiler.vcxproj.filters
+++ b/tools/TestCompiler/TestCompiler.vcxproj.filters
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="TestLexer.cpp" />
+    <ClCompile Include="TestCompiler.cpp" />
     <ClCompile Include="..\..\engine\common\CFileSystem.cpp">
       <Filter>common</Filter>
     </ClCompile>
@@ -18,6 +18,12 @@
       <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\CWriteFile.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\engine\common\ScriptLexer.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\engine\common\ScriptParser.cpp">
       <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\..\engine\common\wowDatabase.cpp">
@@ -47,9 +53,12 @@
     <ClCompile Include="..\..\engine\common\wowWMOFile.cpp">
       <Filter>common</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\engine\common\ScriptLexer.cpp">
-      <Filter>common</Filter>
-    </ClCompile>
+    <ClCompile Include="ScriptCompiler.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="common">
+      <UniqueIdentifier>{0e277312-a7ec-42dc-8cf5-238b374c9be1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\engine\common\aabbox3d.h">
@@ -118,6 +127,12 @@
     <ClInclude Include="..\..\engine\common\SColor.h">
       <Filter>common</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\engine\common\ScriptLexer.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\common\ScriptParser.h">
+      <Filter>common</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\engine\common\stringext.h">
       <Filter>common</Filter>
     </ClInclude>
@@ -169,13 +184,6 @@
     <ClInclude Include="..\..\engine\common\wowWMOStruct.h">
       <Filter>common</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\engine\common\ScriptLexer.h">
-      <Filter>common</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Filter Include="common">
-      <UniqueIdentifier>{30c4bb0c-e326-4452-b896-db9676f24c4a}</UniqueIdentifier>
-    </Filter>
+    <ClInclude Include="ScriptCompiler.h" />
   </ItemGroup>
 </Project>
