--- a/tools/TestCompiler/TestCompiler.vcxproj
+++ b/tools/TestCompiler/TestCompiler.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="..\..\engine\common\wowWDC3File.cpp" />
     <ClCompile Include="..\..\engine\common\wowWMOFile.cpp" />
     <ClCompile Include="ScriptCompiler.cpp" />
+    <ClCompile Include="ScriptTranslator.cpp" />
     <ClCompile Include="TestCompiler.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -225,6 +226,7 @@
     <ClInclude Include="..\..\engine\common\wowWMOFile.h" />
     <ClInclude Include="..\..\engine\common\wowWMOStruct.h" />
     <ClInclude Include="ScriptCompiler.h" />
+    <ClInclude Include="ScriptTranslator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
