--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -72,6 +72,7 @@
     <ClInclude Include="..\engine\CLight.h" />
     <ClInclude Include="..\engine\CLightSetting.h" />
     <ClInclude Include="..\engine\CMaterial.h" />
+    <ClInclude Include="..\engine\CMaterialManager.h" />
     <ClInclude Include="..\engine\CMesh.h" />
     <ClInclude Include="..\engine\CMeshManager.h" />
     <ClInclude Include="..\engine\CMeshSceneNode.h" />
@@ -134,6 +135,7 @@
     <ClCompile Include="..\engine\CLight.cpp" />
     <ClCompile Include="..\engine\CLightSetting.cpp" />
     <ClCompile Include="..\engine\CMaterial.cpp" />
+    <ClCompile Include="..\engine\CMaterialManager.cpp" />
     <ClCompile Include="..\engine\CMesh.cpp" />
     <ClCompile Include="..\engine\CMeshManager.cpp" />
     <ClCompile Include="..\engine\CMeshSceneNode.cpp" />
