--- a/tools/TestCompiler/TestCompiler.vcxproj
+++ b/tools/TestCompiler/TestCompiler.vcxproj
@@ -179,8 +179,8 @@
     <ClCompile Include="..\..\engine\common\wowWDB5File.cpp" />
     <ClCompile Include="..\..\engine\common\wowWDC3File.cpp" />
     <ClCompile Include="..\..\engine\common\wowWMOFile.cpp" />
-    <ClCompile Include="ScriptCompiler.cpp" />
-    <ClCompile Include="ScriptTranslator.cpp" />
+    <ClCompile Include="Ogre\ScriptCompiler.cpp" />
+    <ClCompile Include="Ogre\ScriptTranslator.cpp" />
     <ClCompile Include="TestCompiler.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -225,8 +225,8 @@
     <ClInclude Include="..\..\engine\common\wowWDC3File.h" />
     <ClInclude Include="..\..\engine\common\wowWMOFile.h" />
     <ClInclude Include="..\..\engine\common\wowWMOStruct.h" />
-    <ClInclude Include="ScriptCompiler.h" />
-    <ClInclude Include="ScriptTranslator.h" />
+    <ClInclude Include="Ogre\ScriptCompiler.h" />
+    <ClInclude Include="Ogre\ScriptTranslator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
