--- a/tools/TestParser/TestParser.vcxproj
+++ b/tools/TestParser/TestParser.vcxproj
@@ -168,8 +168,10 @@
     <ClCompile Include="..\..\engine\common\CSysCodeCvt.cpp" />
     <ClCompile Include="..\..\engine\common\CSysThread.cpp" />
     <ClCompile Include="..\..\engine\common\CWriteFile.cpp" />
+    <ClCompile Include="..\..\engine\common\ScriptCompiler.cpp" />
     <ClCompile Include="..\..\engine\common\ScriptLexer.cpp" />
     <ClCompile Include="..\..\engine\common\ScriptParser.cpp" />
+    <ClCompile Include="..\..\engine\common\ScriptTranslator.cpp" />
     <ClCompile Include="..\..\engine\common\wowDatabase.cpp" />
     <ClCompile Include="..\..\engine\common\wowDbFile.cpp" />
     <ClCompile Include="..\..\engine\common\wowEnvironment.cpp" />
@@ -204,8 +206,10 @@
     <ClInclude Include="..\..\engine\common\rect.h" />
     <ClInclude Include="..\..\engine\common\S3DVertex.h" />
     <ClInclude Include="..\..\engine\common\SColor.h" />
+    <ClInclude Include="..\..\engine\common\ScriptCompiler.h" />
     <ClInclude Include="..\..\engine\common\ScriptLexer.h" />
     <ClInclude Include="..\..\engine\common\ScriptParser.h" />
+    <ClInclude Include="..\..\engine\common\ScriptTranslator.h" />
     <ClInclude Include="..\..\engine\common\stringext.h" />
     <ClInclude Include="..\..\engine\common\varianttype.h" />
     <ClInclude Include="..\..\engine\common\vector2d.h" />
