--- a/engine/mywow/mywow.vcxproj
+++ b/engine/mywow/mywow.vcxproj
@@ -80,6 +80,7 @@
     <ClInclude Include="..\engine\CRenderLoop.h" />
     <ClInclude Include="..\engine\CScene.h" />
     <ClInclude Include="..\engine\CSceneRenderer.h" />
+    <ClInclude Include="..\engine\CTextureManager.h" />
     <ClInclude Include="..\engine\CWinMemDbg.h" />
     <ClInclude Include="..\engine\CWinMiniDump.h" />
     <ClInclude Include="..\engine\EngineUtil.h" />
@@ -147,6 +148,7 @@
     <ClCompile Include="..\engine\CSceneRenderer.cpp" />
     <ClCompile Include="..\engine\CShaderUtil.cpp" />
     <ClCompile Include="..\engine\CSysUtil.cpp" />
+    <ClCompile Include="..\engine\CTextureManager.cpp" />
     <ClCompile Include="..\engine\CTimer.cpp" />
     <ClCompile Include="..\engine\CWinMemDbg.cpp" />
     <ClCompile Include="..\engine\CWinMiniDump.cpp" />
