--- a/tools/TestWowDatabase/TestWowDatabase.vcxproj.filters
+++ b/tools/TestWowDatabase/TestWowDatabase.vcxproj.filters
@@ -61,6 +61,9 @@
     <ClCompile Include="..\..\engine\common\wowWDC2File.cpp">
       <Filter>common</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\engine\common\q_memory.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\engine\common\aabbox3d.h">
@@ -193,6 +196,15 @@
       <Filter>common</Filter>
     </ClInclude>
     <ClInclude Include="..\..\engine\common\wowWDC2File.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\common\fixstring.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\common\q_memory.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\common\qzone_allocator.h">
       <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
