--- a/tools/TestCompiler/TestCompiler.vcxproj.filters
+++ b/tools/TestCompiler/TestCompiler.vcxproj.filters
@@ -62,6 +62,12 @@
     <ClCompile Include="..\..\engine\engine\ScriptTranslator.cpp">
       <Filter>engine</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\engine\common\q_memory.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\engine\common\wowWDC2File.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="common">
@@ -203,6 +209,21 @@
     </ClInclude>
     <ClInclude Include="..\..\engine\engine\ScriptTranslator.h">
       <Filter>engine</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\common\fixstring.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\common\q_memory.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\common\qzone_allocator.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\common\wowAnimation.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\engine\common\wowWDC2File.h">
+      <Filter>common</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
