--- a/tools/TestWowDatabase/TestWowDatabase.vcxproj
+++ b/tools/TestWowDatabase/TestWowDatabase.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="..\..\engine\common\CSysCodeCvt.cpp" />
     <ClCompile Include="..\..\engine\common\CSysThread.cpp" />
     <ClCompile Include="..\..\engine\common\CWriteFile.cpp" />
+    <ClCompile Include="..\..\engine\common\q_memory.cpp" />
     <ClCompile Include="..\..\engine\common\ScriptLexer.cpp" />
     <ClCompile Include="..\..\engine\common\ScriptParser.cpp" />
     <ClCompile Include="..\..\engine\common\wowDatabase.cpp" />
@@ -192,6 +193,7 @@
     <ClInclude Include="..\..\engine\common\CSysSync.h" />
     <ClInclude Include="..\..\engine\common\CSysThread.h" />
     <ClInclude Include="..\..\engine\common\CWriteFile.h" />
+    <ClInclude Include="..\..\engine\common\fixstring.h" />
     <ClInclude Include="..\..\engine\common\frustum.h" />
     <ClInclude Include="..\..\engine\common\function.h" />
     <ClInclude Include="..\..\engine\common\function3d.h" />
@@ -200,6 +202,8 @@
     <ClInclude Include="..\..\engine\common\plane3d.h" />
     <ClInclude Include="..\..\engine\common\predefine.h" />
     <ClInclude Include="..\..\engine\common\quaternion.h" />
+    <ClInclude Include="..\..\engine\common\qzone_allocator.h" />
+    <ClInclude Include="..\..\engine\common\q_memory.h" />
     <ClInclude Include="..\..\engine\common\rect.h" />
     <ClInclude Include="..\..\engine\common\S3DVertex.h" />
     <ClInclude Include="..\..\engine\common\SColor.h" />
