--- a/tools/TestWowGameFile/TestWowGameFile.vcxproj
+++ b/tools/TestWowGameFile/TestWowGameFile.vcxproj
@@ -164,7 +164,11 @@
     <ClCompile Include="..\..\engine\common\CMemFile.cpp" />
     <ClCompile Include="..\..\engine\common\CReadFile.cpp" />
     <ClCompile Include="..\..\engine\common\CSysCodeCvt.cpp" />
+    <ClCompile Include="..\..\engine\common\CSysThread.cpp" />
     <ClCompile Include="..\..\engine\common\CWriteFile.cpp" />
+    <ClCompile Include="..\..\engine\common\q_memory.cpp" />
+    <ClCompile Include="..\..\engine\common\ScriptLexer.cpp" />
+    <ClCompile Include="..\..\engine\common\ScriptParser.cpp" />
     <ClCompile Include="..\..\engine\common\wowDatabase.cpp" />
     <ClCompile Include="..\..\engine\common\wowDbFile.cpp" />
     <ClCompile Include="..\..\engine\common\wowEnvironment.cpp" />
@@ -172,6 +176,7 @@
     <ClCompile Include="..\..\engine\common\wowM2File.cpp" />
     <ClCompile Include="..\..\engine\common\wowTable.cpp" />
     <ClCompile Include="..\..\engine\common\wowWDB5File.cpp" />
+    <ClCompile Include="..\..\engine\common\wowWDC2File.cpp" />
     <ClCompile Include="..\..\engine\common\wowWDC3File.cpp" />
     <ClCompile Include="..\..\engine\common\wowWMOFile.cpp" />
     <ClCompile Include="TestWowGameFile.cpp" />
@@ -182,10 +187,13 @@
     <ClInclude Include="..\..\engine\common\CFileSystem.h" />
     <ClInclude Include="..\..\engine\common\CMemFile.h" />
     <ClInclude Include="..\..\engine\common\CReadFile.h" />
+    <ClInclude Include="..\..\engine\common\CResourceCache.h" />
     <ClInclude Include="..\..\engine\common\CSysChrono.h" />
     <ClInclude Include="..\..\engine\common\CSysCodeCvt.h" />
     <ClInclude Include="..\..\engine\common\CSysSync.h" />
+    <ClInclude Include="..\..\engine\common\CSysThread.h" />
     <ClInclude Include="..\..\engine\common\CWriteFile.h" />
+    <ClInclude Include="..\..\engine\common\fixstring.h" />
     <ClInclude Include="..\..\engine\common\frustum.h" />
     <ClInclude Include="..\..\engine\common\function.h" />
     <ClInclude Include="..\..\engine\common\function3d.h" />
@@ -194,14 +202,19 @@
     <ClInclude Include="..\..\engine\common\plane3d.h" />
     <ClInclude Include="..\..\engine\common\predefine.h" />
     <ClInclude Include="..\..\engine\common\quaternion.h" />
+    <ClInclude Include="..\..\engine\common\qzone_allocator.h" />
+    <ClInclude Include="..\..\engine\common\q_memory.h" />
     <ClInclude Include="..\..\engine\common\rect.h" />
     <ClInclude Include="..\..\engine\common\S3DVertex.h" />
     <ClInclude Include="..\..\engine\common\SColor.h" />
+    <ClInclude Include="..\..\engine\common\ScriptLexer.h" />
+    <ClInclude Include="..\..\engine\common\ScriptParser.h" />
     <ClInclude Include="..\..\engine\common\stringext.h" />
     <ClInclude Include="..\..\engine\common\varianttype.h" />
     <ClInclude Include="..\..\engine\common\vector2d.h" />
     <ClInclude Include="..\..\engine\common\vector3d.h" />
     <ClInclude Include="..\..\engine\common\vector4d.h" />
+    <ClInclude Include="..\..\engine\common\wowAnimation.h" />
     <ClInclude Include="..\..\engine\common\wowDatabase.h" />
     <ClInclude Include="..\..\engine\common\wowDbFile.h" />
     <ClInclude Include="..\..\engine\common\wowEnums.h" />
@@ -212,6 +225,7 @@
     <ClInclude Include="..\..\engine\common\wowM2Struct.h" />
     <ClInclude Include="..\..\engine\common\wowTable.h" />
     <ClInclude Include="..\..\engine\common\wowWDB5File.h" />
+    <ClInclude Include="..\..\engine\common\wowWDC2File.h" />
     <ClInclude Include="..\..\engine\common\wowWDC3File.h" />
     <ClInclude Include="..\..\engine\common\wowWMOFile.h" />
     <ClInclude Include="..\..\engine\common\wowWMOStruct.h" />
